--- a/Devices.Wpa81/App.xaml
+++ b/Devices.Wpa81/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application
+﻿<ui:RunnerApplication
     x:Class="Devices.Wpa81.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Devices.Wpa81">
-
-</Application>
+    xmlns:ui="using:Xunit.Runners.UI">
+</ui:RunnerApplication>
